@@ -64,6 +64,7 @@ pip-delete-this-directory.txt
 
 # Unit test / coverage reports
 htmlcov/
+jsoncov/
 .tox/
 .coverage
 .coverage.*
